<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_feed">

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.example.homefinder.ui.feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.homefinder.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_saves"
        android:name="com.example.homefinder.ui.saves.SavesFragment"
        android:label="@string/title_saves"
        tools:layout="@layout/fragment_saves" />

    <fragment
        android:id="@+id/navigation_alerts"
        android:name="com.example.homefinder.ui.alerts.AlertsFragment"
        android:label="@string/title_alerts"
        tools:layout="@layout/fragment_alerts" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.example.homefinder.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
</navigation>