<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".UserActivity">

    <Button
        android:id="@+id/hirebtn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/rounded_submit_layout"
        android:onClick="leasePressed"
        android:text="@string/lease"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/rentbtn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/rounded_submit_layout"
        android:onClick="rentPressed"
        android:text="@string/rent"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hirebtn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/userquestion"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>