<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignUpActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="80dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/rounded_edittext_layout"
                android:ems="10"
                android:hint="@string/prompt_name"
                android:inputType="text"
                android:paddingLeft="15dp"
               />

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/rounded_edittext_layout"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                />


            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/rounded_edittext_layout"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                />




            <EditText
                android:id="@+id/confrimPassword"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/rounded_edittext_layout"
                android:ems="10"
                android:hint="@string/prompt_confirmpassword"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                 />
            <Button
                android:id="@+id/submitBTN"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/rounded_submit_layout"
                android:text="SIGN UP"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"

                />
            <Button
                android:id="@+id/loginGoogleBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/rounded_google_layout"
                android:drawableLeft="@mipmap/google"
                android:paddingLeft="20dp"
                android:paddingRight="30dp"
                android:text="@string/googlelogin"
                android:textSize="14dp"
                />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>