<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/loginBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo" />

    <Button
        android:id="@+id/loginBTN"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="25dp"
        android:background="@color/colorWhite"
        android:onClick="gotoLoginActivity"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/SignupBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/SignupBTN"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="150dp"
        android:background="@color/colorAccent"
        android:onClick="gotoSignUpActivity"
        android:text="@string/signup"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>