<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LeaseActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"
       android:layout_marginBottom="80dp"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/rooms"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="70dp"
                    android:background="@drawable/rounded_edittext_layout"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/rooms"
                    android:inputType="textPersonName"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/specifications" />

                <Button
                    android:id="@+id/submitbutton"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="70dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/submit"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/photos" />

                <Button
                    android:id="@+id/photos"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="70dp"
                    android:background="@drawable/rounded_submit_layout"
                    android:drawableLeft="@android:drawable/ic_menu_camera"
                    android:text="@string/photos"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/price" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="70dp"
                    android:background="@drawable/rounded_edittext_layout"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/location" />

                <EditText
                    android:id="@+id/price"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="70dp"
                    android:background="@drawable/rounded_edittext_layout"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/price"
                    android:inputType="textPersonName"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phone" />

                <EditText
                    android:id="@+id/specifications"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="70dp"
                    android:background="@drawable/rounded_edittext_layout"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/specifications"
                    android:inputType="textPersonName"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/requirements" />

                <EditText
                    android:id="@+id/location"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="70dp"
                    android:background="@drawable/rounded_edittext_layout"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/location"
                    android:inputType="textPersonName"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rooms" />

                <TextView
                    android:id="@+id/requirements"
                    android:layout_width="0dp"
                    android:layout_height="77dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="@string/requirements"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>