<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/loginBTN"
                    android:layout_width="0dp"
                    android:layout_height="50dp"

                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="70dp"
                    android:layout_marginTop="15dp"

                    android:background="@drawable/rounded_submit_layout"
                    android:onClick="loginButtonPressed"
                    android:text="Login"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />

                <Button
                    android:id="@+id/loginGoogleBTN"
                    android:layout_width="0dp"
                    android:layout_height="50dp"

                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="70dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_google_layout"
                    android:drawableLeft="@mipmap/google"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/googlelogin"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/orTV" />

                <EditText
                    android:id="@+id/passwordLogin"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="70dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_edittext_layout"
                    android:ems="10"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailLogin" />

                <EditText
                    android:id="@+id/emailLogin"
                    android:layout_height="50dp"
                    android:layout_width="match_parent"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="215dp"
                    android:layout_marginEnd="70dp"
                    android:background="@drawable/rounded_edittext_layout"
                    android:ems="10"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/orTV"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="35dp"
                    android:text="@string/or"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginBTN" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>